--- a/ans-hw6/src/my_own_namespace/yandex_cloud_elk/playbook.yml
+++ b/ans-hw6/src/my_own_namespace/yandex_cloud_elk/playbook.yml
@@ -4,7 +4,7 @@
   gather_facts: false
 
   roles:
-    - role: create_file
+    - role: my_own_namespace.yandex_cloud_elk.create_file
       file_path: /tmp/role_created_file.txt
       file_content: |
         This file was created using the create_file role.
